--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: Lions Eat Python
 author: Gibson Nwobi
-description: A technical blog about all things Python!
+# description: A technical blog about all things Python!
